Se agregaron botones para la eleccion del filtro por fecha,lugar y facultad

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
     <head>       
      <title>HTML PARA PRIMER PUNTO</title>
     </head>
+
     <body>
         <h2>Filtro por:</h2>
-<select name="Filtro por:" >
+        
+<select name="Eliga cual sera su Filtro" >
      
    <option value="1">Fecha</option> 
    <option value="2">Lugar</option> 
    <option value="3">Facultad</option>
-   <option value="10">Otra opcion</option> 
+   <option value="4">Otra opcion</option> 
    
 </select>
+            <table border="2px"> <!-- Lo cambiaremos por CSS -->
+            <button>FILTRAR <b> Fecha</b> <br></button>
+            <button>FILTRAR <b> Lugar</b> <br></button>
+            <button>FILTRAR <b> Facultad</b> <br></button>
+                <br>  </br>
 
-    <body>
-        <table border="2px"> <!-- Lo cambiaremos por CSS -->
-            <h1>espacio</h1>
             <tr>
                 <th>Titulo</th>
                 <th>Descripcion</th>
