Tabla lista segun formato incluye todas las clases

--- a/opcion.html
+++ b/opcion.html
@@ -18,7 +18,7 @@
 <table class="table" border="2px">
     <tr class="table">
 
-    <th rowspan="3">  
+    <th rowspan="3" class="leftbox" >  
         <div class="date-time-place">
     <div class="day">27</div><br>
     <div class="month">Ago</div> <br>           
@@ -26,14 +26,14 @@
      </div>
    </th>     
 
-    <th colspan="4">
+    <th colspan="4" class="content" >
       <div class="content-div">
         <div class="title"><h3>Evento Super interesnte</h3></div>
       </div> 
     </th>
    </tr>
-  <tr>
-    <td colspan="4" rowspan="2">
+  <tr  class="table">
+    <td colspan="4" rowspan="2" class="content">
       <div class="content-div">
       <div class="description">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -48,15 +48,15 @@
   </tr>
 
 
-  <tr>
+  <tr >
   </tr>
-  <tr>
-    <td>
+  <tr  class="table">
+    <td class="leftbox">
     <div class="date-time-place">
       <div class="time">13:50</div>
     </div>
     </td>
-    <td>
+    <td class="content">
       <div class="content-div">
       <div class="organizer-info">
        Organiza: 
@@ -67,7 +67,7 @@
   </div>
     </td>
 
-    <td colspan="2">
+    <td colspan="2"  class="content">
       <div class="content-div">
       <div class="organizer-info">
       <div class="email"><a href="xavier@uniandes.edu.co">xavier@uniandes.edu.co</a>
@@ -76,7 +76,7 @@
       </div>
     </td>
 
-    <td>
+    <td  class="content">
 <div class="content-div">
       <div class="organizer-info">
       <div class="organizer-more">[mas info]
@@ -86,8 +86,8 @@
     </td>
 
     </tr>
-  <tr>
-    <td>
+  <tr  class="table">
+    <td class="leftbox">
       <div class="date-time-place">
       <div class="place">
         W504
@@ -103,7 +103,8 @@
   </div>
   </div>
     </td>
-<td><div class="content-div">
+<td class="content">
+  <div class="content-div">
       <div class="key-words">
   <div class="key-w">
     buaja
@@ -111,7 +112,8 @@
   </div>
   </div>
 </td>
-    <td><div class="content-div">
+    <td class="content">
+      <div class="content-div">
       <div class="key-words">
   <div class="key-w">
     buaja
@@ -119,7 +121,8 @@
   </div>
   </div>
 </td>
-    <td><div class="content-div">
+    <td class="content">
+      <div class="content-div">
       <div class="key-words">
   <div class="key-w">
     buaja
